name:                   iproute-aeson
version:                0.1.0.0
synopsis:               Aeson types for IP instances.
description:            Instances of Aeson's ToJSON and FromJSON for IP addresses.
homepage:               http://github.com/oldmanmike/iproute-aeson
bug-reports:            http://github.com/oldmanmike/iproute-aeson/issues
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:              Copyright (C) 2015 Michael Carpenter 
category:               Web
build-type:             Simple
extra-source-files:     README.md, LICENSE 
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Data.IP.Aeson
  build-depends:        base >= 4.7 && < 5,
                        aeson,
                        iproute,
                        text
  default-language:     Haskell2010

test-suite iproute-aeson-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:      aeson,
                        base,
                        bytestring,
                        hspec,
                        iproute,
                        iproute-aeson,
                        QuickCheck,
                        random
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/iproute-aeson
